implemented rent history for a book
