# routes/api.php
@@ -19,6 +19,7 @@ Route::prefix('v1')->group(function () {
         Route::get('books', [BookController::class, 'search']);
         Route::post('books/rent', [RentalController::class, 'rent']);
         Route::post('books/return', [RentalController::class, 'returnBook']);
+        Route::get('/books/{id}/rental-history', [RentalController::class, 'rentalHistoryForBook']);
 
         // Rental history and statistics
         Route::get('rentals/history', [RentalController::class, 'rentalHistory']);
